# cpp-utils

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  javawrap.cpp  javawrap.h  javawrap_array.cpp  javawrap_array.h  javawrap_collection.h
cmake/: catch2.cmake
src/hash/: CMakeLists.txt  fnv1a.h
src/hash/include/: murmur.h
src/jwrap/: CMakeLists.txt  javawrap.cpp  javawrap.h  javawrap_array.h  javawrap_collection.h
src/jwrap/include/: javawrap.h
src/math/: CMakeLists.txt  int128.cpp
src/memory/: CMakeLists.txt
src/memory/include/: compressed_pair.h  tagged_ptr.h
src/string/: CMakeLists.txt  inline_string.h  string_util.h
src/string/include/: inline_string.h
test/jwrap/: CMakeLists.txt  javawrap.cpp
test/math/: CMakeLists.txt  int128.cpp
test/string/: CMakeLists.txt  inline_string.cpp
